# document_extractor_service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/application/: llm_engine.py  orchestrator.py  ports.py  prompt_registry.py
app/core/: config.py  exceptions.py  http.py  logger.py  middleware.py
app/domain/: api_schemas.py  entities.py  value_objects.py
app/infrastructure/: discord_bot.py  image_processor.py  sheets_client.py
app/presentation/: api.py
